--- a/404/css/style.css
+++ b/404/css/style.css
@@ -1,16 +1,61 @@
 body{
-    background: url("../img/background.jpg");
+    background: url("../img/background.png");
     background-repeat: no-repeat;
     background-position-x: center;
     background-size: 76vh;
     margin: 0px;
+    font-family: 'Open Sans', sans-serif;
 }
+
+
+
+#home{
+
+}
+#setting{
+    display: none;
+}
+#achivement{
+    display: none;
+}
+#user{
+    display: none;
+}
+
+
+.head{
+    text-align: center;
+    font-size: 2em;
+}
+
+
+.botnav{
+    display: inline-block;
+    position: fixed;
+    bottom: 0px;
+    background-color: rgba(0,0,0,.5);
+    width: 100vw;
+
+}
+.nav{
+    display: flex;
+    justify-content:space-between;
+    margin: 14px 14px 14px 14px;
+
+}
+.nav button{
+    background-color: rgba(0,0,0,0);
+    border: 0;
+
+}
+
+
 
 
 .playb{
     display: flex;
     justify-content: center;
-    margin-top: 50vh;
+    margin-top: 53vh;
 }
 .play{
     font-size: 4em;
@@ -20,17 +65,22 @@ body{
     border: 0px;
     background-color: rgb(1,1,1,0);
     box-shadow: inset 0 0 2000px rgba(225,225,225,.7);
+    font-family: 'Open Sans', sans-serif;
 }
-.botnav{
-    display: inline-block;
-    position: fixed;
-    bottom: 0px;
-    background-color: rgba(0,0,0,.5);
-    width: 100vw;
-    padding: 7px 0 7px 0;
 
-}
-.nav{
+
+
+
+
+.select{
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 50vh;
+    margin-left: 15vw;
+}
+.select button{
+    display: block;
+    font-size: 2em;
+    width: 70vw;
 }
