--- a/ImageSlider/style.css
+++ b/ImageSlider/style.css
@@ -7,6 +7,7 @@ body {
   max-width: 1000px;
   height: 100%;
   margin: auto;
+  text-align: center;
 }
 img {
   vertical-align: middle;
@@ -24,6 +25,7 @@ img {
   font-size: 18px;
   transition: 0.6s ease;
   margin-right: 266px;
+  margin-left: 269px;
   background-color: black;
   color: white;
 }
@@ -49,4 +51,26 @@ img {
 @keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
+}
+
+@media only screen and (max-width: 768px) {
+  /* For phone*/
+  body{
+    height: 90vh;
+  }
+  img{
+    max-width: 100vw;
+    max-height: 100vh;
+    height: auto;
+  }
+  .prev, .next {
+    position: absolute;
+    margin: 0;
+  }
+  .prev{
+    margin-left: 80px;
+  }
+  .next{
+    margin-right: 80px;
+  }
 }
